# vigilant-system

./: Cargo.toml  readme.md
.cargo/: config.toml
benches/: benchmark.rs
src/: lib.rs  main.rs
src/lib/: algorithms.rs  mod.rs  utils.rs
src/lib/algorithms/: all.rs  basic.rs  one.rs  two.rs
