[package]
name = "practice"
version = "0.1.0"
edition = "2021"
authors = ["Tony Chen <xygerista@users.noreply.github.com>"]

[lib]
name = "lib"
path = "src/lib/mod.rs"

[[bin]]
name = "bin"
path = "src/bin/main.rs"


[dev-dependencies]
criterion = { version = "0.3.0", features = ["html_reports"]}

[[bench]]
name = "benchmark"
harness = false

[dependencies]
rayon = "1.5.1"