[package]
name = "practice"
version = "0.2.0"
edition = "2021"
authors = ["Tony Chen <xyberista@users.noreply.github.com>"]

[lib]
name = "lib"
path = "src/lib/mod.rs"

[[bin]]
name = "bin"
path = "src/bin/main.rs"


[dev-dependencies]
criterion = { version = "0.3.5", features = ["html_reports"]}

[[bench]]
name = "benchmark"
harness = false

[dependencies]
rayon = "1.5.1"
ahash = "0.7.6"